--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,6 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+*pycache__
+*.pyc
+*.DS_Store
+projet2I013/__pycache__/robot.cpython-36.pyc
+projet2I013/__pycache__/arene.cpython-36.pyc
+projet2I013/__pycache__/robot.cpython-36.pyc
